Fix for crash setting name on diagram-only association via Association Properties page according to analysis in comment #2:

umbrello/dialogs/pages/associationgeneralpage.cpp
- In function updateObject() add test of m_pStereoChkB against NULL before
  dereferencing.

BUG:338980